

class ATBasic:
    def build_command(self, cmd_to_encapsulate):
        pass

    def extract_command(self, encapsulated_cmd) -> list:
        pass

class EBasic:
    pass